Added some styling to navbar

--- a/index.html
+++ b/index.html
@@ -9,32 +9,36 @@
     <title>Ari's Tutoring</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-custom">
-        <div class="container-fluid">
-          <!-- Brand/logo -->
-          <a class="navbar-brand white-text" href="#">Ari's Math & More Tutoring</a>
-          <!-- Toggler button for mobile -->
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-            data-bs-target="#navbarNav" aria-controls="navbarNav" 
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Collapsible content -->
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="services.html">Subjects & Services</a>
-              </li>  
-              <li class="nav-item">
-                <a class="nav-link" href="about.html">About Me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
-      
+  <nav class="navbar navbar-expand-lg navbar-custom">
+    <div class="container-fluid">
+      <!-- Brand/logo -->
+      <a class="navbar-brand white-text" href="#"><span class="logo">Ari's</span> Math & More Tutoring</a>
+      <!-- Toggler button for mobile -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+        data-bs-target="#navbarNav" aria-controls="navbarNav" 
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Collapsible content -->
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item pe-4">
+            <a class="nav-link white-text hover" href="services.html">Subjects & Services</a>
+          </li>  
+          <li class="nav-item pe-4">
+            <a class="nav-link white-text hover" href="about.html">About Me</a>
+          </li>
+          <li class="nav-itempe-4">
+            <a class="nav-link white-text hover" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Image -->
+  <div>
+    
+  </div>      
 </body>
 </html>
