Added image and some text to home page

--- a/index.html
+++ b/index.html
@@ -35,10 +35,17 @@
       </div>
     </div>
   </nav>
-
   <!-- Image -->
+  <div class="hero-image">
+    <div class="text-center">
+      <h2>Personalized Tutoring for Academic Success</h2>
+      <h2>Math & More – In-Person in Ventura County & Online</h2>
+    </div>
+  </div>   
+  <!-- Text -->
   <div>
-    
-  </div>      
+    <h1>Welcome!</h1>
+    <p>I provide one-on-one tutoring for students in grades K-9, specializing in math. With years of teaching and tutoring experience, I focus on building confidence, improving problem-solving skills, and making learning enjoyable.</p>
+  </div>
 </body>
 </html>
