--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Ari's Tutoring</title>
 </head>
-<body>
+<body class="gray-background">
   <nav class="navbar navbar-expand-lg navbar-custom">
     <div class="container-fluid">
       <!-- Brand/logo -->
@@ -38,14 +38,17 @@
   <!-- Image -->
   <div class="hero-image">
     <div class="text-center">
-      <h2>Personalized Tutoring for Academic Success</h2>
-      <h2>Math & More – In-Person in Ventura County & Online</h2>
+      <h2 class="hero-text pt-2">Personalized Tutoring for Academic Success</h2>
+      <h2 class="hero-text">Math & More – In-Person in Ventura County & Online</h2>
     </div>
   </div>   
   <!-- Text -->
-  <div>
-    <h1>Welcome!</h1>
-    <p>I provide one-on-one tutoring for students in grades K-9, specializing in math. With years of teaching and tutoring experience, I focus on building confidence, improving problem-solving skills, and making learning enjoyable.</p>
+  <div class="text-center p-2">
+    <h1 class="p-2">Welcome!</h1>
+    <p class="body-text">I provide one-on-one tutoring for students in grades K-12, specializing in math. With years of teaching and tutoring experience, I focus on building confidence, improving problem-solving skills, and making learning enjoyable.</p>
+  </div>
+  <div class="copyright d-flex justify-content-center align-items-center mt-5">
+    <p class="white-text pt-3">&copy; Ari's Math & More Tutoring. All rights reserved.</p>
   </div>
 </body>
 </html>
