--- a/index.html
+++ b/index.html
@@ -1,54 +1,199 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles.css">
-    <title>Ari's Tutoring</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Ari's Math & More Tutoring — Home</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <style>
+    :root {
+      --brand-navy: #1a2b4c;
+      --brand-accent: #f5a623;
+      --brand-light: #f7f9fc;
+    }
+
+    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
+    .text-brand { color: var(--brand-navy) !important; }
+    .bg-brand { background: var(--brand-navy) !important; }
+    .bg-brand-soft { background: var(--brand-light); }
+
+    .btn-accent { background: var(--brand-accent); color: #111; font-weight: 600; }
+    .btn-accent:hover { background: #d7901d; color: #111; }
+    .btn-outline-accent { border: 2px solid var(--brand-accent); color: var(--brand-accent); font-weight: 600; }
+    .btn-outline-accent:hover { background: var(--brand-accent); color: #111; }
+
+    /* .hero { background: linear-gradient(135deg, var(--brand-navy) 0%, #0f1a2e 100%); color: white; } */
+    .hero .badge { background: rgba(255,255,255,0.2); }
+
+    .service-card { border: none; box-shadow: 0 4px 12px rgba(0,0,0,0.05); transition: transform .2s; }
+    .service-card:hover { transform: translateY(-5px); }
+    .service-card .icon { font-size: 2rem; }
+
+    .step { background: white; border-radius: 12px; padding: 1.5rem; box-shadow: 0 2px 8px rgba(0,0,0,0.05); }
+    .step-num { background: var(--brand-navy); color: white; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; }
+
+    footer { background: var(--brand-navy); color: white; }
+    footer a { color: var(--brand-accent); text-decoration: none; }
+    footer a:hover { text-decoration: underline; }
+  </style>
 </head>
-<body class="gray-background">
-  <nav class="navbar navbar-expand-lg navbar-custom">
-    <div class="container-fluid">
-      <!-- Brand/logo -->
-      <a class="navbar-brand white-text" href="#"><span class="logo">Ari's</span> Math & More Tutoring</a>
-      <!-- Toggler button for mobile -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-        data-bs-target="#navbarNav" aria-controls="navbarNav" 
-        aria-expanded="false" aria-label="Toggle navigation">
+<body>
+  <!-- Nav -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-brand shadow-sm sticky-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="#">Ari's Math & More Tutoring</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <!-- Collapsible content -->
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item pe-4">
-            <a class="nav-link white-text hover" href="services.html">Subjects & Services</a>
-          </li>  
-          <li class="nav-item pe-4">
-            <a class="nav-link white-text hover" href="about.html">About Me</a>
-          </li>
-          <li class="nav-itempe-4">
-            <a class="nav-link white-text hover" href="contact.html">Contact</a>
-          </li>
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
         </ul>
+        <div class="ms-lg-3">
+          <a href="/contact" class="btn btn-accent">Schedule a Session</a>
+        </div>
       </div>
     </div>
   </nav>
-  <!-- Image -->
-  <div class="hero-image">
-    <div class="text-center">
-      <h2 class="hero-text pt-2">Personalized Tutoring for Academic Success</h2>
-      <h2 class="hero-text">Math & More – In-Person in Ventura County & Online</h2>
+
+  <!-- Hero -->
+  <header class="hero py-5">
+    <div class="container">
+      <div class="row align-items-center g-5">
+        <div class="col-12 text-center p-3">
+            <h1 class="display-6 fw-bold">
+             <span class="text-warning">Personalized tutoring</span> that meets students where they are.
+            </h1>
+            <p class="lead mt-3 mb-3">
+            Every student learns differently. Together, we’ll build <span class="text-warning">skills, confidence, and a love for learning.</span>
+            <p class="mb-4">
+                <i class="bi bi-laptop"></i> Online tutoring • 
+                <i class="bi bi-geo-alt"></i> Ventura County in-person sessions
+            </p>
+
+            <div class="d-flex gap-3 flex-wrap justify-content-center">
+            <a href="#contact" class="btn btn-accent btn-lg">Schedule a Session</a>
+            <a href="#services" class="btn btn-outline-accent btn-lg">Subjects & Services</a>
+            </div>
+        </div>
+        </div>
+
     </div>
-  </div>   
-  <!-- Text -->
-  <div class="text-center p-2">
-    <h1 class="p-2">Welcome!</h1>
-    <p class="body-text">I provide one-on-one tutoring for students in grades K-12, specializing in math. With years of teaching and tutoring experience, I focus on building confidence, improving problem-solving skills, and making learning enjoyable.</p>
+  </header>
+
+  <section id="services" class="py-5">
+  <div class="container">
+    <h2 class="display-6 text-brand mb-2">What I Can Help With</h2>
+    <p class="text-secondary mb-5">Every student is different. I meet them where they are and help them grow with patience and encouragement.</p>
+
+    <div class="row g-4">
+      <!-- K–8 Any Subject -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card service-card h-100 rounded-4">
+          <div class="card-body text-center">
+            <div class="icon mb-3"><i class="fas fa-book fa-2x text-brand"></i></div>
+            <h5 class="card-title mb-2">K–8 • Any Subject</h5>
+            <p class="text-secondary">Step-by-step help across reading, writing, math, science, and more.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- High School Math -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card service-card h-100 rounded-4">
+          <div class="card-body text-center">
+            <div class="icon mb-3"><i class="fas fa-square-root-alt fa-2x text-brand"></i></div>
+            <h5 class="card-title mb-2">High School Math & Science</h5>
+            <p class="text-secondary">Clear explanations that make tough topics click.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Intro Programming -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card service-card h-100 rounded-4">
+          <div class="card-body text-center">
+            <div class="icon mb-3"><i class="fas fa-laptop-code fa-2x text-brand"></i></div>
+            <h5 class="card-title mb-2">Intro to Programming</h5>
+            <p class="text-secondary">Fun, hands-on projects that build problem-solving skills.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Homework & Study Skills -->
+      <div class="col-md-6 col-lg-3">
+        <div class="card service-card h-100 rounded-4">
+          <div class="card-body text-center">
+            <div class="icon mb-3"><i class="fas fa-pencil-alt fa-2x text-brand"></i></div>
+            <h5 class="card-title mb-2">Homework & Study Skills</h5>
+            <p class="text-secondary">Tools and routines that make school feel manageable.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="copyright d-flex justify-content-center align-items-center mt-5">
-    <p class="white-text pt-3">&copy; Ari's Math & More Tutoring. All rights reserved.</p>
+</section>
+
+
+  <!-- About -->
+  <section id="about" class="py-5 bg-brand-soft">
+  <div class="container">
+    <div class="row align-items-center g-4">
+      
+      <!-- Photo column -->
+      <div class="col-lg-6 d-flex justify-content-center">
+        <div class="about-photo-wrapper">
+        <img src="images/m&m_about_home.png" alt="Ari's portrait">
+        </div>
+      </div>
+
+      <!-- Text column -->
+      <div class="col-lg-6">
+        <h2 class="display-6 text-brand mb-3">About Me</h2>
+        <p class="lead mb-3">
+            I believe learning should be supportive, low-stress, and even fun. 
+            With experience as both a credentialed teacher and a tutor, I help students 
+            grow in skills and confidence while keeping things engaging along the way.
+        </p>
+        <div class="p-4 bg-white rounded-4 shadow">
+          <h6 class="text-uppercase text-secondary">What you can expect</h6>
+          <ul class="mt-2 mb-0">
+            <li>Kind, patient tutoring style</li>
+            <li>Customized learning plan</li>
+            <li>Engaging activities</li>
+            <li>Encouraging accountability</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
+</section>
+
+
+  <!-- Footer -->
+<footer class="pt-5 pb-4 bg-brand text-white">
+  <div class="container text-center">
+    <h5 class="fw-bold">Ari's Math & More Tutoring</h5>
+    <p>Helping students build confidence in math and beyond.</p>
+    <p>
+      <i class="bi bi-geo-alt-fill me-2"></i>
+      Available online anywhere or in-person across Ventura County
+    </p>
+    <p>
+      <i class="bi bi-envelope-fill me-2"></i>
+      <a href="mailto:yourname@example.com" class="text-accent fw-semibold">yourname@example.com</a>
+    </p>
+    <hr class="my-4" />
+    <div>© <span id="year"></span> Ari's Math & More Tutoring</div>
+  </div>
+</footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
