--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ari's Math & More Tutoring — Home</title>
+  <title>Tang Tutoring — Home</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
@@ -25,7 +25,6 @@
     .btn-outline-accent { border: 2px solid var(--brand-accent); color: var(--brand-accent); font-weight: 600; }
     .btn-outline-accent:hover { background: var(--brand-accent); color: #111; }
 
-    /* .hero { background: linear-gradient(135deg, var(--brand-navy) 0%, #0f1a2e 100%); color: white; } */
     .hero .badge { background: rgba(255,255,255,0.2); }
 
     .service-card { border: none; box-shadow: 0 4px 12px rgba(0,0,0,0.05); transition: transform .2s; }
@@ -44,23 +43,22 @@
   <!-- Nav -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-brand shadow-sm sticky-top">
     <div class="container">
-      <a class="navbar-brand fw-bold" href="#">Ari's Math & More Tutoring</a>
+      <a class="navbar-brand fw-bold" href="index.html">Tang Tutoring</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
         <div class="ms-lg-3">
-          <a href="/contact" class="btn btn-accent">Schedule a Session</a>
+          <a href="contact.html" class="btn btn-accent">Schedule a Session</a>
         </div>
       </div>
     </div>
   </nav>
-
   <!-- Hero -->
   <header class="hero py-5">
     <div class="container">
@@ -77,19 +75,18 @@
             </p>
 
             <div class="d-flex gap-3 flex-wrap justify-content-center">
-            <a href="#contact" class="btn btn-accent btn-lg">Schedule a Session</a>
-            <a href="#services" class="btn btn-outline-accent btn-lg">Subjects & Services</a>
+            <a href="contact.html" class="btn btn-accent btn-lg">Book a Free 30-Minute Trial</a>
+            <a href="services.html" class="btn btn-outline-accent btn-lg">View Subjects & Services</a>
             </div>
         </div>
         </div>
-
     </div>
   </header>
 
   <section id="services" class="py-5">
   <div class="container">
-    <h2 class="display-6 text-brand mb-2">What I Can Help With</h2>
-    <p class="text-secondary mb-5">Every student is different. I meet them where they are and help them grow with patience and encouragement.</p>
+    <h2 class="display-6 text-brand mb-2">What We Can Help With</h2>
+    <p class="text-secondary mb-5">Every student is different. We meet them where they are and help them grow with patience and encouragement.</p>
 
     <div class="row g-4">
       <!-- K–8 Any Subject -->
@@ -103,7 +100,7 @@
         </div>
       </div>
 
-      <!-- High School Math -->
+      <!-- High School Math & Science -->
       <div class="col-md-6 col-lg-3">
         <div class="card service-card h-100 rounded-4">
           <div class="card-body text-center">
@@ -148,17 +145,17 @@
       <!-- Photo column -->
       <div class="col-lg-6 d-flex justify-content-center">
         <div class="about-photo-wrapper">
-        <img src="images/m&m_about_home.png" alt="Ari's portrait">
+        <img src="images/IMG_2079.jpg" alt="Ari and Wesley portrait">
         </div>
       </div>
 
       <!-- Text column -->
       <div class="col-lg-6">
-        <h2 class="display-6 text-brand mb-3">About Me</h2>
+        <h2 class="display-6 text-brand mb-3">About Us</h2>
         <p class="lead mb-3">
-            I believe learning should be supportive, low-stress, and even fun. 
-            With experience as both a credentialed teacher and a tutor, I help students 
-            grow in skills and confidence while keeping things engaging along the way.
+          We believe learning should be supportive, low-stress, and even fun. 
+          Together, we bring a mix of classroom teaching, tutoring, and industry experience.
+          Our goal is to help students build skills and confidence while keeping things engaging along the way.
         </p>
         <div class="p-4 bg-white rounded-4 shadow">
           <h6 class="text-uppercase text-secondary">What you can expect</h6>
@@ -167,6 +164,7 @@
             <li>Customized learning plan</li>
             <li>Engaging activities</li>
             <li>Encouraging accountability</li>
+            <li><strong>Free 30-minute trial session for new students</strong></li>
           </ul>
         </div>
       </div>
@@ -178,7 +176,7 @@
   <!-- Footer -->
 <footer class="pt-5 pb-4 bg-brand text-white">
   <div class="container text-center">
-    <h5 class="fw-bold">Ari's Math & More Tutoring</h5>
+    <h5 class="fw-bold">Tang Tutoring</h5>
     <p>Helping students build confidence in math and beyond.</p>
     <p>
       <i class="bi bi-geo-alt-fill me-2"></i>
@@ -189,7 +187,7 @@
       <a href="mailto:yourname@example.com" class="text-accent fw-semibold">yourname@example.com</a>
     </p>
     <hr class="my-4" />
-    <div>© <span id="year"></span> Ari's Math & More Tutoring</div>
+    <div>© <span id="year"></span> Tang Tutoring</div>
   </div>
 </footer>
 
