--- a/services.html
+++ b/services.html
@@ -1,13 +1,182 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>Subjects & Services</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Tang Tutoring — Services</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <style>
+    :root{ --brand-navy:#1a2b4c; --brand-navy-800:#0f1a2e; --brand-accent:#f5a623; --brand-accent-600:#d7901d; --brand-light:#f7f9fc; }
+    body{font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
+    .text-brand{color:var(--brand-navy)!important}
+    .bg-brand{background:linear-gradient(135deg, var(--brand-navy) 0%, var(--brand-navy-800) 100%)}
+    .btn-accent{background:var(--brand-accent);color:#111;font-weight:600;border:none}
+    .btn-accent:hover{background:var(--brand-accent-600);color:#111}
+    footer{background:var(--brand-navy);color:#fff}
+    footer a{color:var(--brand-accent);text-decoration:none}
+    footer a:hover{text-decoration:underline}
+  </style>
 </head>
 <body>
-    
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-brand shadow-sm sticky-top">
+    <div class="container">
+      <a class="navbar-brand fw-bold" href="index.html">Tang Tutoring</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item"><a class="nav-link active" href="services.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+        <div class="ms-lg-3">
+          <a href="contact.html" class="btn btn-accent">Schedule a Session</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Page Hero -->
+  <header class="hero-services text-white py-5">
+    <div class="container text-center">
+      <h1 class="display-6 fw-bold">Tutoring Services</h1>
+      <p class="mb-0 text-white-50">Online anywhere • In‑person across Ventura County</p>
+    </div>
+  </header>
+
+  <!-- Services -->
+  <section class="py-5">
+    <div class="container">
+      <div class="row justify-content-center g-4">
+        <div class="col-lg-8">
+          <div class="mb-4">
+            <h2 class="h4 text-brand mb-2"><i class="fa-solid fa-book-open me-2"></i>K–8 Tutoring (any subject)</h2>
+            <p class="text-secondary mb-2">Step‑by‑step help across reading, writing, math, science, and more.</p>
+            <ul class="mb-0">
+              <li>Homework support & skill‑building</li>
+              <li>Study habits, organization, confidence</li>
+              <li>Online or in‑person 1:1</li>
+            </ul>
+          </div>
+
+          <div class="mb-4">
+            <h2 class="h4 text-brand mb-2">
+                <i class="fa-solid fa-square-root-variable me-2"></i>High School Math & Science
+            </h2>
+            <p class="text-secondary mb-2">
+                Support in all core math and science subjects - from homework help to AP exam prep.
+            </p>
+            <ul class="mb-0">
+                <li>Algebra I/II, Geometry, Statistics, Precalculus, Calculus (AP)</li>
+                <li>Chemistry (AP), Physics (AP), Biology</li>
+                <li>Targeted practice, quiz/test prep</li>
+                <li>Calculator, lab skills & study strategies</li>
+            </ul>
+          </div>
+          <div class="mb-4">
+            <h2 class="h4 text-brand mb-2"><i class="fa-solid fa-laptop-code me-2"></i>Intro to Programming</h2>
+            <p class="text-secondary mb-2">Project‑based lessons that build problem‑solving skills.</p>
+            <ul class="mb-0">
+              <li>HTML/CSS/Javascript or C# fundamentals</li>
+              <li>Logic & algorithms through mini‑projects</li>
+              <li>Beginner‑friendly tools & setup</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Pricing -->
+  <section id="pricing" class="py-5 bg-light">
+    <div class="container">
+      <h2 class="text-center mb-3">Pricing</h2>
+      <p class="text-center text-muted mt-3">
+        Rates start at <strong>$60/hr</strong> for K–8 online sessions. 
+        Please <a href="contact.html">contact us</a> to discuss high school and AP rates, 
+        in-person sessions, and multi-session packages.
+      </p>
+      <div class="alert alert-info text-center mt-4 rounded-4">
+        We offer a <strong>free 30-minute trial session</strong> so you can experience our tutoring style before committing.
+      </div>
+      <div class="text-center mt-3">
+        <a href="contact.html" class="btn btn-accent btn-lg">Book Your Free Trial</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQ -->
+  <section class="py-5">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <h2 class="h4 text-brand mb-3">FAQ</h2>
+          <div class="accordion" id="faqAcc">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="q1h">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q1">Do you tutor online and in person?</button>
+              </h2>
+              <div id="q1" class="accordion-collapse collapse" data-bs-parent="#faqAcc">
+                <div class="accordion-body">Yes. We tutor online anywhere and in person across Ventura County.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="q2h">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q2">How long are sessions?</button>
+              </h2>
+              <div id="q2" class="accordion-collapse collapse" data-bs-parent="#faqAcc">
+                <div class="accordion-body">Most sessions are 60 minutes, but longer sessions can be booked if needed.</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="q3h">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q3">How do we get started?</button>
+              </h2>
+              <div id="q3" class="accordion-collapse collapse" data-bs-parent="#faqAcc">
+                <div class="accordion-body">To get started, just <a href="contact.html">reach out through our contact page</a> 
+                  or email us directly. We’ll schedule a <strong>free 30-minute trial session</strong> 
+                  so you can experience our tutoring style. After that, we’ll create a personalized 
+                  plan and regular schedule based on your goals.</div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="q4h">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#q4">
+                  What payment methods do you accept?
+                </button>
+              </h2>
+              <div id="q4" class="accordion-collapse collapse" data-bs-parent="#faqAcc">
+                <div class="accordion-body">
+                  We accept payment by <strong>Venmo, Zelle, cash, or check</strong>.  
+                  Credit and debit cards are not accepted at this time.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer  -->
+  <footer class="pt-5 pb-4">
+    <div class="container text-center">
+      <h5 class="fw-bold">Tang Tutoring</h5>
+      <p>Helping students build confidence in math and beyond.</p>
+      <p class="mb-1"><i class="bi bi-geo-alt-fill me-2"></i>Online anywhere • In‑person across Ventura County</p>
+      <p class="mb-0"><i class="bi bi-envelope-fill me-2"></i><a href="mailto:yourname@example.com" class="text-decoration-none" style="color:var(--brand-accent)">yourname@example.com</a></p>
+      <hr class="my-4" />
+      <div>© <span id="year"></span> Tang Tutoring</div>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
