Maintain consistency using stylesheet for all pages

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <!-- Bootstrap Icons (optional small UI icons) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
+    <link rel="stylesheet" href="styles.css">
   <!-- Inline styles (move to styles.css later) -->
   <style>
     :root{ --brand-navy:#1a2b4c; --brand-navy-800:#0f1a2e; --brand-accent:#f5a623; --brand-accent-600:#d7901d; --brand-light:#f7f9fc; }
@@ -45,146 +45,146 @@
   </style>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-brand shadow-sm sticky-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Tang Tutoring</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-        </ul>
-        <div class="ms-lg-3">
-          <a href="contact.html" class="btn btn-accent">Schedule a Session</a>
-        </div>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Hero -->
-  <header class="hero-about">
-    <div class="container py-5 text-center">
-      <h1 class="display-6 fw-bold">About Tang Tutoring</h1>
-      <p class="text-white-50 mb-0">Supportive, low‑stress, and actually fun — that’s how we approach learning.</p>
-    </div>
-  </header>
-
-  <!-- Mission / Intro -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-lg-9">
-          <p class="lead mb-3">
-            We believe learning should be supportive, low‑stress, and even fun. Ari brings classroom teaching and tutoring experience as a credentialed teacher, while Wesley adds a Master’s degree, prior tutoring, and over 10 years in the tech industry. Together, we help students build skills and confidence across math, science, and programming.
-          </p>
-          <div class="alert alert-info text-center rounded-4 mb-0">
-            🎉 New to Tang Tutoring? Enjoy a <strong>free 30‑minute trial session</strong> — online anywhere or in‑person across Ventura County.
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Who we are -->
-  <section class="py-4 bg-brand-soft">
-    <div class="container">
-      <div class="row g-4 align-items-stretch">
-        <!-- Ari card -->
-        <div class="col-md-6">
-          <div class="card-clean p-4 rounded-4 h-100">
-            <div class="d-flex flex-column align-items-center text-center">
-              <div class="avatar-circle mb-3">
-                <img src="images/ad_profile_pic.jpg" alt="Ari – Tang Tutoring">
-              </div>
-              <h3 class="h5 mb-1">Ari Tang</h3>
-              <p class="text-secondary mb-3">Credentialed Teacher • Tutor • M.S. CS in progress</p>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-brand shadow-sm sticky-top">
+        <div class="container">
+            <a class="navbar-brand fw-bold" href="index.html">Tang Tutoring</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainNav">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                </ul>
+                <div class="ms-lg-3">
+                    <a href="contact.html" class="btn btn-accent">Schedule a Session</a>
+                </div>
             </div>
-            <p class="mb-3">Ari is a credentialed teacher with 3 years of classroom experience in math and over 4 years of tutoring. Currently earning a Master’s in Computer Science at CSU Channel Islands and working in the tech industry as a product quality engineer, Ari brings both teaching expertise and real‑world STEM perspective to tutoring.</p>
-            <ul class="list-unstyled list-check mb-0">
-              <li><i class="fa-solid fa-check me-2"></i>Grades K–8 (any subject)</li>
-              <li><i class="fa-solid fa-check me-2"></i>High school math foundations</li>
-              <li><i class="fa-solid fa-check me-2"></i>Study skills & organization</li>
-            </ul>
-          </div>
         </div>
-        <!-- Wesley card -->
-        <div class="col-md-6">
-          <div class="card-clean p-4 rounded-4 h-100">
-            <div class="d-flex flex-column align-items-center text-center">
-              <div class="avatar-circle mb-3">
-                <img src="images/wesley.jpeg" alt="Wesley – Tang Tutoring">
-              </div>
-              <h3 class="h5 mb-1">Wesley Tang</h3>
-              <p class="text-secondary mb-3">B.S. Aerospace Eng • M.S. Business • Software Engineer</p>
+    </nav>
+
+    <!-- Hero -->
+    <header class="hero-about">
+        <div class="container py-5 text-center">
+            <h1 class="display-6 fw-bold">About Tang Tutoring</h1>
+            <p class="text-white-50 mb-0">Supportive, low‑stress, and actually fun — that’s how we approach learning.</p>
+        </div>
+    </header>
+
+    <!-- Mission / Intro -->
+    <section class="py-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-9">
+                    <p class="lead mb-3">
+                        We believe learning should be supportive, low‑stress, and even fun. Ari brings classroom teaching and tutoring experience as a credentialed teacher, while Wesley adds a Master’s degree, prior tutoring, and over 10 years in the tech industry. Together, we help students build skills and confidence across math, science, and programming.
+                    </p>
+                    <div class="alert alert-info text-center rounded-4 mb-0">
+                        🎉 New to Tang Tutoring? Enjoy a <strong>free 30‑minute trial session</strong> — online anywhere or in‑person across Ventura County.
+                    </div>
+                </div>
             </div>
-            <p class="mb-3">Wesley studied Aerospace Engineering at UC Irvine and earned a Master’s in Business from CSU Channel Islands. With over a decade of experience as a software engineer and a background in tutoring, Wesley makes math, science, and programming practical, approachable, and engaging for students.</p>
-            <ul class="list-unstyled list-check mb-0">
-              <li><i class="fa-solid fa-check me-2"></i>Algebra through AP Calculus</li>
-              <li><i class="fa-solid fa-check me-2"></i>Biology, Chemistry, Physics (incl. AP)</li>
-              <li><i class="fa-solid fa-check me-2"></i>Intro to programming (Python)</li>
-            </ul>
-          </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- How we tutor -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row g-4 align-items-stretch">
-        <div class="col-lg-7">
-          <div class="card-clean p-4 rounded-4 h-100">
-            <h2 class="h5 text-brand mb-3">Our tutoring approach</h2>
-            <ul class="mb-0">
-              <li class="mb-2"><strong>Meet students where they are.</strong> We start with a quick check‑in to understand goals and challenges.</li>
-              <li class="mb-2"><strong>Make learning click.</strong> Clear explanations, worked examples, and guided practice.</li>
-              <li class="mb-2"><strong>Build confident habits.</strong> Light accountability, study skills, and simple routines.</li>
-              <li class="mb-0"><strong>Keep parents in the loop.</strong> Brief updates and progress notes as requested.</li>
-            </ul>
-          </div>
+    <!-- Who we are -->
+    <section class="py-4 bg-brand-soft">
+        <div class="container">
+            <div class="row g-4 align-items-stretch">
+                <!-- Ari card -->
+                <div class="col-md-6">
+                    <div class="card-clean p-4 rounded-4 h-100">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <div class="avatar-circle mb-3">
+                                <img src="images/ad_profile_pic.jpg" alt="Ari – Tang Tutoring">
+                            </div>
+                            <h3 class="h5 mb-1">Ari Tang</h3>
+                            <p class="text-secondary mb-3">Credentialed Teacher • Tutor • M.S. CS in progress</p>
+                        </div>
+                        <p class="mb-3">Ari is a credentialed teacher with 3 years of classroom experience in math and over 4 years of tutoring. Currently earning a Master’s in Computer Science at CSU Channel Islands and working in the tech industry as a product quality engineer, Ari brings both teaching expertise and real‑world STEM perspective to tutoring.</p>
+                        <ul class="list-unstyled list-check mb-0">
+                            <li><i class="fa-solid fa-check me-2"></i>Grades K–8 (any subject)</li>
+                            <li><i class="fa-solid fa-check me-2"></i>High school math foundations</li>
+                            <li><i class="fa-solid fa-check me-2"></i>Study skills & organization</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Wesley card -->
+                <div class="col-md-6">
+                    <div class="card-clean p-4 rounded-4 h-100">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <div class="avatar-circle mb-3">
+                                <img src="images/wesley.jpeg" alt="Wesley – Tang Tutoring">
+                            </div>
+                            <h3 class="h5 mb-1">Wesley Tang</h3>
+                            <p class="text-secondary mb-3">B.S. Aerospace Eng • M.S. Business • Software Engineer</p>
+                        </div>
+                        <p class="mb-3">Wesley studied Aerospace Engineering at UC Irvine and earned a Master’s in Business from CSU Channel Islands. With over a decade of experience as a software engineer and a background in tutoring, Wesley makes math, science, and programming practical, approachable, and engaging for students.</p>
+                        <ul class="list-unstyled list-check mb-0">
+                            <li><i class="fa-solid fa-check me-2"></i>Algebra through AP Calculus</li>
+                            <li><i class="fa-solid fa-check me-2"></i>Biology, Chemistry, Physics (incl. AP)</li>
+                            <li><i class="fa-solid fa-check me-2"></i>Intro to programming (Python)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-5">
-          <div class="card-clean p-4 rounded-4 h-100">
-            <h2 class="h5 text-brand mb-3">Service area & availability</h2>
-            <ul class="mb-3">
-              <li>Online anywhere</li>
-              <li>In‑person across Ventura County</li>
-              <li>Most sessions are 60 minutes (longer by request)</li>
-            </ul>
-            <a href="/contact" class="btn btn-accent w-100">Book Your Free 30‑Minute Trial</a>
-          </div>
+    </section>
+
+    <!-- How we tutor -->
+    <section class="py-5">
+        <div class="container">
+            <div class="row g-4 align-items-stretch">
+                <div class="col-lg-7">
+                    <div class="card-clean p-4 rounded-4 h-100">
+                        <h2 class="h5 text-brand mb-3">Our tutoring approach</h2>
+                        <ul class="mb-0">
+                            <li class="mb-2"><strong>Meet students where they are.</strong> We start with a quick check‑in to understand goals and challenges.</li>
+                            <li class="mb-2"><strong>Make learning click.</strong> Clear explanations, worked examples, and guided practice.</li>
+                            <li class="mb-2"><strong>Build confident habits.</strong> Light accountability, study skills, and simple routines.</li>
+                            <li class="mb-0"><strong>Keep parents in the loop.</strong> Brief updates and progress notes as requested.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-5">
+                    <div class="card-clean p-4 rounded-4 h-100">
+                        <h2 class="h5 text-brand mb-3">Service area & availability</h2>
+                        <ul class="mb-3">
+                            <li>Online anywhere</li>
+                            <li>In‑person across Ventura County</li>
+                            <li>Most sessions are 60 minutes (longer by request)</li>
+                        </ul>
+                        <a href="/contact" class="btn btn-accent w-100">Book Your Free 30‑Minute Trial</a>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- CTA -->
-  <section class="py-5 bg-brand text-white">
-    <div class="container text-center">
-      <h2 class="fw-bold mb-2">Ready to see if we're a fit?</h2>
-      <p class="mb-4 text-white-50">Start with a free 30‑minute trial session — no pressure, just a friendly chat and a bit of learning.</p>
-      <a href="/contact" class="btn btn-accent btn-lg">Get Started</a>
-    </div>
-  </section>
+    <!-- CTA -->
+    <section class="py-5 bg-brand text-white">
+        <div class="container text-center">
+            <h2 class="fw-bold mb-2">Ready to see if we're a fit?</h2>
+            <p class="mb-4 text-white-50">Start with a free 30‑minute trial session — no pressure, just a friendly chat and a bit of learning.</p>
+            <a href="/contact" class="btn btn-accent btn-lg">Get Started</a>
+        </div>
+    </section>
 
-  <!-- Footer -->
-  <footer class="pt-5 pb-4">
-    <div class="container text-center">
-      <h5 class="fw-bold">Tang Tutoring</h5>
-      <p>Helping students build confidence in math, science, and programming.</p>
-      <p class="mb-1"><i class="bi bi-geo-alt-fill me-2"></i>Online anywhere • In‑person across Ventura County</p>
-      <p class="mb-0"><i class="bi bi-envelope-fill me-2"></i><a href="mailto:yourname@example.com" class="text-decoration-none" style="color:var(--brand-accent)">yourname@example.com</a></p>
-      <hr class="my-4" />
-      <div>© <span id="year"></span> Tang Tutoring</div>
-    </div>
-  </footer>
+    <!-- Footer -->
+    <footer class="pt-5 pb-4">
+        <div class="container text-center">
+            <h5 class="fw-bold">Tang Tutoring</h5>
+            <p>Helping students build confidence in math, science, and programming.</p>
+            <p class="mb-1"><i class="bi bi-geo-alt-fill me-2"></i>Online anywhere • In‑person across Ventura County</p>
+            <p class="mb-0"><i class="bi bi-envelope-fill me-2"></i><a href="mailto:yourname@example.com" class="text-decoration-none" style="color:var(--brand-accent)">yourname@example.com</a></p>
+            <hr class="my-4" />
+            <div>© <span id="year"></span> Tang Tutoring</div>
+        </div>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
