Updated hero image picture for contact and services and changed vh on each page to match

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       background:
         linear-gradient(135deg, rgba(26,43,76,.6) 0%, rgba(15,26,46,.6) 100%),
         url("images/pamela-heckel-CtGZi_G_kro-unsplash.jpg") center/cover no-repeat;
-      color:#fff; min-height:45vh; display:flex; align-items:center
+      color:#fff; min-height:40vh; display:flex; align-items:center
     }
 
     /* Circle photo crop helper */
@@ -81,8 +81,8 @@
           <p class="lead mb-3">
             We believe learning should be supportive, low-stress, and even fun. Together we combine classroom teaching, tutoring experience, and industry expertise to guide students through math, science, programming, and other subjects in a way that builds both skills and confidence.
           </p>
-          <div class="alert alert-info text-center rounded-4 mb-0">
-            🎉 New to Tang Tutoring? Enjoy a <strong>free 30‑minute trial session</strong> — online anywhere or in‑person across Ventura County.
+          <div class="alert alert-info text-center rounded-4 mb-0 mx-auto" style="max-width: 600px;">
+            🎉 New to Tang Tutoring? Enjoy a <strong>free 30-minute trial session</strong> — online anywhere or in-person across Ventura County.
           </div>
         </div>
       </div>
