--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
 
   <!-- Page Hero -->
   <header class="hero-services text-white py-5">
-    <div class="container text-center">
+    <div class="container py-5 text-center">
       <h1 class="display-6 fw-bold">Tutoring Services</h1>
       <p class="mb-0 text-white-50">Online anywhere • In‑person across Ventura County</p>
     </div>
