--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 
     .hero-contact{color:#fff;min-height:40vh;display:flex;align-items:center;background:
       linear-gradient(135deg, rgba(26,43,76,.7) 0%, rgba(15,26,46,.7) 100%),
-      url('images/contact-hero.jpg') center/cover no-repeat;}
+      url('images/jess-bailey-q10VITrVYUM-unsplash.jpg') center/cover no-repeat;}
 
     .card-clean{border:none;box-shadow:0 10px 30px rgba(0,0,0,.06)}
   </style>
