--- a/services.html
+++ b/services.html
@@ -42,11 +42,15 @@
   </nav>
 
   <!-- Page Hero -->
-  <header class="hero-services text-white py-5">
-    <div class="container py-5 text-center">
-      <h1 class="display-6 fw-bold">Tutoring Services</h1>
-      <p class="mb-0 text-white-50">Online anywhere • In‑person across Ventura County</p>
+  <header class="hero-services d-flex align-items-center text-white">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 text-center py-5">
+        <h1 class="display-6 fw-bold mb-2">Tutoring Services</h1>
+        <p class="mb-0 text-white-50">Online anywhere • In-person across Ventura County</p>
+      </div>
     </div>
+  </div>
   </header>
 
   <!-- Services -->
