Updated footer with correct email and credits

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
             </ul>
             <div class="p-3 bg-brand-soft rounded-4">
               <div class="small text-secondary">Prefer email? Reach us at</div>
-              <a href="mailto:yourname@example.com" class="fw-semibold" style="color:var(--brand-navy)">yourname@example.com</a>
+              <a href="mailto:info@tangtutoring.com" class="fw-semibold" style="color:var(--brand-navy)">info@tangtutoring.com</a>
             </div>
           </div>
         </div>
@@ -160,9 +160,10 @@
       <h5 class="fw-bold">Tang Tutoring</h5>
       <p>Helping students build confidence in math, science, and programming.</p>
       <p class="mb-1"><i class="bi bi-geo-alt-fill me-2"></i>Online anywhere • In‑person across Ventura County</p>
-      <p class="mb-0"><i class="bi bi-envelope-fill me-2"></i><a href="mailto:yourname@example.com" class="text-decoration-none" style="color:var(--brand-accent)">yourname@example.com</a></p>
+      <p class="mb-0"><i class="bi bi-envelope-fill me-2"></i><a href="mailto:info@tangtutoring.com" class="text-decoration-none" style="color:var(--brand-accent)">info@tangtutoring.com</a></p>
       <hr class="my-4" />
       <div>© <span id="year"></span> Tang Tutoring</div>
+      <span class="d-block small text-secondary">This site was built by Tang Tutoring. <a href="mailto:info@tangtutoring.com" class="text-accent">We can build yours too</a>.</span>
     </div>
   </footer>
 
@@ -204,5 +205,6 @@
         }
       });
     })();
+    document.getElementById('year').textContent = new Date().getFullYear();
 </script>
 </body>
