--- a/index.html
+++ b/index.html
@@ -184,10 +184,11 @@
     </p>
     <p>
       <i class="bi bi-envelope-fill me-2"></i>
-      <a href="mailto:yourname@example.com" class="text-accent fw-semibold">yourname@example.com</a>
+      <a href="mailto:info@tangtutoring.com" class="text-accent fw-semibold">info@tangtutoring.com</a>
     </p>
     <hr class="my-4" />
     <div>© <span id="year"></span> Tang Tutoring</div>
+    <span class="d-block small text-secondary">This site was built by Tang Tutoring. <a href="mailto:info@tangtutoring.com" class="text-accent">We can build yours too</a>.</span>
   </div>
 </footer>
 
