Changed emoji to boostrap icon

--- a/about.html
+++ b/about.html
@@ -82,7 +82,8 @@
             We believe learning should be supportive, low-stress, and even fun. Together we combine classroom teaching, tutoring experience, and industry expertise to guide students through math, science, programming, and other subjects in a way that builds both skills and confidence.
           </p>
           <div class="alert alert-info text-center rounded-4 mb-0 mx-auto" style="max-width: 600px;">
-            🎉 New to Tang Tutoring? Enjoy a <strong>free 30-minute trial session</strong> — online anywhere or in-person across Ventura County.
+            <i class="bi bi-gift-fill me-2 text-accent"></i>
+            New to Tang Tutoring? Enjoy a <strong>free 30-minute trial session</strong> — online anywhere or in-person across Ventura County.
           </div>
         </div>
       </div>
