Added meta image alt to each page

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="About Us | Tang Tutoring – Experienced Tutors in Ventura County">
   <meta property="og:description" content="Learn about Tang Tutoring. With classroom teaching, tutoring experience, and real-world STEM backgrounds, we help students build skills and confidence across math, science, programming, and more.">
   <meta property="og:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <meta property="og:image:alt" content="About Tang Tutoring – experienced tutors with teaching and STEM backgrounds in Ventura County">
   <meta property="og:url" content="https://tangtutoring.com/about.html">
   <meta property="og:type" content="website">
   <!-- Twitter -->
