--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="Contact Tang Tutoring | Schedule a Free 30-Minute Trial Session">
   <meta property="og:description" content="Get in touch with Tang Tutoring. Schedule your free 30-minute trial and discover how we make learning supportive, low-stress, and confidence-boosting across math, science, programming, and more.">
   <meta property="og:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <meta property="og:image:alt" content="Contact Tang Tutoring – schedule your free 30-minute trial tutoring session">
   <meta property="og:url" content="https://tangtutoring.com/contact.html">
   <meta property="og:type" content="website">
   <!-- Twitter -->
