--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="Tang Tutoring | Math, Science, Programming & More in Ventura County">
   <meta property="og:description" content="Personalized K–12 tutoring in math, science, programming, and more. Online anywhere or in-person across Ventura County. Book a free 30-minute trial session today.">
   <meta property="og:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <meta property="og:image:alt" content="Tang Tutoring – K–12 math, science, programming, and more tutoring in Ventura County">
   <meta property="og:url" content="https://tangtutoring.com">
   <meta property="og:type" content="website">
   <!-- Twitter -->
