--- a/services.html
+++ b/services.html
@@ -9,6 +9,7 @@
   <meta property="og:title" content="Tutoring Services | Tang Tutoring – K-12 Math, Science, Programming & More">
   <meta property="og:description" content="Explore our tutoring services for K–12 students. We provide support in math, science, programming, study skills, and more — with flexible online or in-person sessions.">
   <meta property="og:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <meta property="og:image:alt" content="Tang Tutoring tutoring services – K–12 math, science, programming, study skills, and more">
   <meta property="og:url" content="https://tangtutoring.com/services.html">
   <meta property="og:type" content="website">
   <!-- Twitter -->
