--- a/about.html
+++ b/about.html
@@ -17,6 +17,10 @@
   <meta name="twitter:title" content="About Us | Tang Tutoring – Experienced Tutors in Ventura County">
   <meta name="twitter:description" content="Learn about Tang Tutoring. With classroom teaching, tutoring experience, and real-world STEM backgrounds, we help students build skills and confidence across math, science, programming, and more.">
   <meta name="twitter:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <!-- Favicons -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap -->
