--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,10 @@
   <meta name="twitter:title" content="Contact Tang Tutoring | Schedule a Free 30-Minute Trial Session">
   <meta name="twitter:description" content="Get in touch with Tang Tutoring. Schedule your free 30-minute trial and discover how we make learning supportive, low-stress, and confidence-boosting across math, science, programming, and more.">
   <meta name="twitter:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <!-- Favicons -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
   <!-- Bootstrap -->
