--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
   <meta name="twitter:title" content="Tang Tutoring | Math, Science, Programming & More in Ventura County">
   <meta name="twitter:description" content="Personalized K–12 tutoring in math, science, programming, and more. Online anywhere or in-person across Ventura County. Book a free 30-minute trial session today.">
   <meta name="twitter:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <!-- Favicons -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
