--- a/services.html
+++ b/services.html
@@ -17,6 +17,10 @@
   <meta name="twitter:title" content="Tutoring Services | Tang Tutoring – K-12 Math, Science, Programming & More">
   <meta name="twitter:description" content="Explore our tutoring services for K–12 students. We provide support in math, science, programming, study skills, and more — with flexible online or in-person sessions.">
   <meta name="twitter:image" content="https://tangtutoring.com/images/tang-tutoring-preview.jpg">
+  <!-- Favicons -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
   <!-- CSS -->
   <link rel="stylesheet" href="styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
